2010-08-16  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in [!WIN32]: Add INSERT_SYS_SELECT_H autoconf substitute.

2010-07-09  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in [!__GNUC__ && W32]: Typedef ssize_t and pid_t to
	help building with MSVC.

2010-06-24  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in [W32]: Include time.h and not sys/time.h.

2010-04-19  Marcus Brinkmann  <marcus@g10code.de>

	* misc.c (write2stderr): Dummy variable to silence gcc warning.

2010-04-16  Marcus Brinkmann  <marcus@g10code.de>

	* sexp.c: (sexp_sscan): Make it variable length, and rename the
	old version to ...
	(vsexp_sscan): ... this new function.  Also swap last two arguments.
	(gcry_sexp_create): Remove dummy va_list.
	(gcry_sexp_build): Use vsexp_sscan instead of sexp_sscan.
	(_gcry_sexp_vbuild): Likewise.
	(gcry_sexp_build_array): Remove dummy va_list.
	(gcry_sexp_sscan): Likewise.

2010-04-12  Brad Hards  <bradh@frogmouth.net>  (wk)

	Spelling fixes.

2010-03-15  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in: Add autoconf template to set generated file to
	read-only in an Emacs buffer.

2010-01-21  Werner Koch  <wk@g10code.com>

	* Makefile.am (arch_gpg_error_cflags, arch_gpg_error_libs): New.
	(dumpsexp_CFLAGS): New.
	(dumpsexp_LDADD): Add arch_gpg_error_libs.
	(hmac256_CFLAGS, hmac256_LDADD): Add the arch variables.
	(libgcrypt_la_DEPENDENCIES): Add libcompat.
	* secmem.c (lock_pool): Mark unused args.
	* global.c (do_malloc, gcry_realloc, gcry_free, gcry_calloc)
	(gcry_calloc_secure, gcry_xcalloc, gcry_xcalloc_secure): Use
	gpg_err_set_errno.
	(_gcry_vcontrol): Call _gcry_compat_identification.
	* hmac256.c [__MINGW32CE__]: Include gpg-error.h.
	(_gcry_hmac256_file): Use gpg_err_set_errno.
	(gpg_err_set_errno) [!GPG_ERR_INLINE]: Add macro.
	* g10lib.h: Include libcompat.h.

2010-01-05  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (GCRY_PK_ECDH): New.

2009-12-08  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (GCRY_CIPHER_MODE_AESWRAP): New.
